# buffer

./: CMakeLists.txt
benchmarks/: memcpy_benchmark.cc
cmake/: FindGBenchmark.cmake  FindGFlags.cmake  FindGTest.cmake  FindGlog.cmake
src/: buffer.h  types.h
tests/: buffer_test.cc  buffer_test.cc.bak
